amaroK ChangeLog
================
(c) 2002-2004 the amaroK authors.


  * add: TitleProxy searches for a free local port (added by Stefan Gehn)
  * chg: Random Mode now stores the recently played songs in a buffer, which prevents
         playing the same songs too often.
  * add: "Play Next" context menu option
  * add: selected aRts-effects will be remembered on next program start, including settings
  * fix: sort numerical playlist columns in correct order
  * add: logarithmic fading algorithm makes crossfading smoother
  * add: Select a series of tracks, start inline tag-editing a tag and amaroK will prompt you to
         edit that tag for all tracks one-by-one. Also available: fill-down.
  * add: improved crossfading: will fade out smoothly when the stop button is pressed 
  * fix: O(n) behavior for playlist scrolling fixed
  * add: setting to make playlist colours the KDE defaults
  * add: support for tag-editing directly in playlist  
  * chg: replaced old FileBrowser with the comfortable fileselector from KDevelop
  * add: hide/show selected playlist columns
  * chg: upgrade streambrowser to kderadiostation 0.5
  * fix: many streams not loading from browser and AddItem dialog
  * chg: amaroK moved out of kdenonbeta. we are now member of KDE Extra Gear 1
  * add: on-screen-display (OSD), shows an overlay with information on the currently playing track
  * chg: use KMultiTabBar for browser selection
  * chg: migrated settings system to KConfig XT 
  * add: playlist columns for length and bitrate
  * add: merged new audio engine in. this provides a generic interface class, with multiple
         backends. right now there is a backend for aRts and one for GStreamer (still rudimentary)

==BEGIN KDE 3.2 DEPENDENCY==         
         
VERSION 0.8.3:
  * fix: build issue

VERSION 0.8.2:
  * add: added Hide/Show Playlist global shortcut (thanks gogo)
  * chg: mousewheel over trayicon behaviour changed
  * chg: search tokens can now be entered in random order