@@ -3,6 +3,8 @@ amaroK ChangeLog
 (c) 2002-2004 the amaroK authors.
 
 
+  * chg: Pressing "back" in Random Mode now works as expected and walks backwards
+         through the list of recently played songs.
   * add: TitleProxy searches for a free local port (added by Stefan Gehn)
   * chg: Random Mode now stores the recently played songs in a buffer, which prevents
          playing the same songs too often.
